frontend/infosafe_frontend/src/styling/ViewAccessRequest.css
.viewAccessRequestPopup {
    width: 50vw;
    height: 75vh;
    flex-shrink: 0;
    border-radius: 30px;
    background: rgba(173, 173, 173, 0.69);
    backdrop-filter: blur(20px);
    margin: 0 auto;
}
.accessRequestPopupBorder {
    border: 1px solid #ffffff;
    width: 46vw;
    margin: 0 auto;
    height: 70vh;
    position: relative;
    top: 2.5vh;
    overflow-y: scroll;
    overflow-x: hidden;
    scrollbar-width: none;
}
.accessRequestPopupBorder::-webkit-scrollbar{
    display: none;
}
.viewAccessRequestBackButton {
    background-color: rgba(233, 0, 0, 1);
    border: none;
    position: relative;
    height: 4vh;
    width: 2.5vw;
    align-content: center;
    border-radius: 5px;
    top: 2vh;
    left: 1vw;
    color: #ffffff;
}
.accessRequestBackIcon {
    color: #ffffff;
    margin: 0 auto;
    height: 3vh;
    width: 1.3vw;
}
.viewAccessRequestTitle {
    width: 60%;
    justify-content: center;
    color: #000000;
    text-align: center;
    text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
    font-size: 35px;
    font-family: 'Roboto', sans-serif;
    text-transform: uppercase;
    position: relative;
    top: -3vh;
    left: 20%;
}
.viewAccessRequestDatascopeDiv {
    justify-content: center;
    align-content: center;
    color: #000;
    text-align: center;
    font-size: 25px;
    font-family: 'Roboto', sans-serif;
    position: relative;
    top: 1vh;
    margin-top: 6vh;
}
.viewAccessRequestDatascopeLabel {
    text-transform: uppercase;
    font-size: 22px;
    width: 50%;
    text-align: center;
    border: none;
    position: relative;
    left: 25%;
    margin-bottom: 1vh;
}
.viewAccessRequestDatascopeNameDisplay {
    font-size: 22px;
    width: 50%;
    text-align: center;
    border: none;
    background-color: #ffffff;
    position: relative;
    left: 25%;
    top: 8%;
}
.viewAccessRequestRoleDiv {
    justify-content: center;
    align-content: center;
    color: #000;
    text-align: center;
    font-size: 25px;
    font-family: 'Roboto', sans-serif;
    position: relative;
    margin: 0 auto;
}
.viewAccessRequestRoleLabel {
    text-transform: uppercase;
    font-size: 22px;
    width: 50%;
    text-align: center;
    border: none;
    margin-bottom: 1vh;
    position: relative;
    left: 25%;
}
.viewAccessRequestRoleDisplay {
    font-size: 22px;
    width: 50%;
    text-align: center;
    border: none;
    background-color: #ffffff;
    top: 8%;
    position: relative;
    left: 25%;
}
.viewAccessRequestReasonDiv {
    justify-content: center;
    align-content: center;
    color: #000;
    text-align: center;
    font-size: 25px;
    font-family: 'Roboto', sans-serif;
    position: relative;
    margin: 0 auto;
}
.viewAccessRequestReasonLabel {
    text-transform: uppercase;
    font-size: 22px;
    width: 50%;
    margin: 0 auto;
    text-align: center;
    border: none;
    position: relative;
    top: -1vh;
}
.viewAccessRequestReasonDisplay {
    font-size: 16px;
    width: 50%;
    text-align: left;
    border: none;
    background-color: #ffffff;
    top: 8%;
    position: relative;
}
1 .viewAccessRequestStatusDiv {
    justify-content: center;
    align-content: center;
    color: #000;
    text-align: center;
    font-size: 25px;
    font-family: 'Roboto', sans-serif;
    position: relative;
}
.viewAccessRequestStatusLabel {
    text-transform: uppercase;
    font-size: 22px;
    width: 50%;
    margin: 0 auto;
    text-align: center;
    border: none;
    margin-bottom: 1vh;
}
.viewAccessRequestStatusDisplay {
    font-size: 22px;
    width: 50%;
    text-align: center;
    border: none;
    background-color: #ffffff;
    top: 8%;
    position: relative;
    left: 25%;
}

